--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,9 +1,8 @@
 header {
 	/*background-color: #efefef;*/
-	padding: 5px 5px -3px 5px;
-	border-radius: 3px;
 	margin: auto;
-	width: 95%
+	width: 95%;
+	margin-top: -3%;
 }
 
 h1 {
@@ -16,9 +15,9 @@ h1 {
 }
 
 body {
+	position: relative;
 	background-color: #E4E4E4;
-	width: 95%;
-	margin: auto;
+	left: 17%;
 }
 
 section {
@@ -29,10 +28,10 @@ section {
 
 .background-img {
 	background-image: url("https://farm2.staticflickr.com/1023/712054632_abdac07887_b.jpg");
-	/*height: 513px;
-	width: 1024px;*/
+	position: fixed;
+	background-position: center top;
 	height: 513px;
-	width: 95%;
+	width: 1024px;
 	background-repeat: no-repeat;
 }
 
@@ -51,13 +50,13 @@ a:hover {
 
 .about-me1 {
 	width: 400px;
-	margin-left: 5px;
-	margin-top:-10px;
+	/*margin-left: 5px;
+	margin-top:-10px;*/
 	font-size: 1.125em;
 	font-family: Verdana;
 	/*background-color: #ECF2F9;*/
-	padding-top: 0px;
-	padding-left: 10px;
+	/*padding-top: 0px;
+	padding-left: 10px;*/
 	font-weight: 500;
 	color: white;
 }
@@ -119,11 +118,10 @@ a {
 
 .divider {
 	height: 2px;
-	width: 98%;
+	width: 1000px;
 	background-color: black;
 	border-radius: 5px;
-	margin-bottom: 8px;
-	margin-top: 8px;
-	margin-left: 8px;
-
+	margin-left: -3.3%;
+	/*margin-bottom: 8px;*/
+	/*margin-top: 8px;*/
 }
