Fix the way code displays in right column

--- a/projects/cheat-sheet.css
+++ b/projects/cheat-sheet.css
@@ -45,6 +45,11 @@ body {
   border-radius: 3px;
 }
 
+.code {
+	font-family: Courier;
+	font-size: 13px;
+}
+
 h3, p, pre {
 	padding-left: 1em;
 	padding-right: 1em;
