--- a/projects/cheat-sheet.css
+++ b/projects/cheat-sheet.css
@@ -9,7 +9,7 @@ body {
   /*left: 40px;*/
   top: 179px;
   width: 40%;
-  height: 43.750em;
+  height: 50em;
   /*z-index: 3;*/
   font-family: Helvetica;
   float: left;
@@ -37,7 +37,7 @@ body {
   /*left: 520px;*/
   top: 179px;
   width: 40%;
-  height: 43.750em;
+  height: 90%;
   /*z-index: 5;*/
   font-family: Courier;
   float: left;
@@ -60,7 +60,7 @@ h3, p, pre {
 	background-color: black;
 	width: 98%;
 	left: 1%;
-	margin-top: 15%;
+	margin-top: 20.7%;
 	height: 2px;
 	border-radius: 5px;
 
