--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -72,10 +72,13 @@ a:hover {
 }
 
 section {
-	float: left;
+	/*position: relative;*/
+	/*float: left;*/
 	/*width: 50%;*/
-	max-height: 500px;
+	max-height: 600px;
+	max-width: 75%;
 	overflow: scroll;
+	margin: 0 auto;
 }
 
 section p {
