--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -75,7 +75,7 @@ section {
 	/*position: relative;*/
 	/*float: left;*/
 	/*width: 50%;*/
-	max-height: 600px;
+	max-height: 50%;
 	max-width: 75%;
 	overflow: scroll;
 	margin: 0 auto;
