--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,4 +1,21 @@
-body {
+li {
+	color: white;
+}
+
+.posts a {
+	color: black;
+}
+
+.posts a:hover {
+	color: green;
+}
+
+ul {
+	background-color: rgba(255,255,255,0.5);
+	font-family: Lucida, Monaco, monospace;
+}
+
+/*body {
 	background-image: url("https://farm2.staticflickr.com/1023/712054632_abdac07887_b.jpg");
 	background-repeat: no-repeat;
 	position: relative;
@@ -26,4 +43,4 @@ header {
 
 .divider {
 	margin-left: -6.5%;
-}
+}*/
