--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,80 +1,68 @@
 h1 {
-	width: 52%;
 	float: left;
+	color: black;
+	min-width: 350px;
+	max-width: 35vw;
+	display: inline-block;
 	margin-left: 1em;
-	color: white;
 }
 
 h3 {
-	color: white;
+	color: black;
 }
 
 html {
-	background: url("https://farm2.staticflickr.com/1023/712054632_abdac07887_b.jpg") no-repeat center center fixed;
+	background: url("../imgs/WEB EDIT _MG_9938.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
 
 body {
-	width: 75%;
+	min-width: 1081px;
+	max-width: 90vw;
 	margin: 0 auto;
-	font-family: Helvetica, Sans-serif;
+	font-family: monospace;
 	color: black;
 	font-size: 18px;
-	/*background-image: url("https://farm2.staticflickr.com/1023/712054632_abdac07887_b.jpg");*/
-	/*background-repeat: no-repeat;*/
-	/*background-position: center top;*/
 }
 
-.head-links {
+header ul {
 	position: relative;
-	top: 2em;
+	list-style: none;
+	top: 1em;
+	float: right;
+	max-width: 50vw;
+	min-width: 500px;
+	text-align: right;
+	margin-right: 1em;
 }
 
-/*#L1 {
-	margin-right: .5em;
+header ul li {
+	display: inline;
+	padding-left: 1em;
+	font-size: 1.25em;
+	font-weight: bold;
+	font-family: monospace;
 }
-
-#L2 {
-	margin-left: .5em;
-	margin-right: .5em;
-}
-
-#L3 {
-	margin-left: .5em;
-	margin-right: .5em;
-}
-
-#L4 {
-	margin-left: .5em;
-	margin-right: .5em;
-}
-
-#L5 {
-	margin-left: .5em;
-}*/
 
 a {
-	color: white;
+	color: black;
 	text-decoration: none;
 }
 
 a:hover {
-	color: blue;
+	color: green;
 }
 
 .divider {
 	width: 100%;
 	height: 2px;
-	background-color: white;
+	background-color: black;
 	border-radius: 3px;
 	clear: both;
 }
 
 section {
-	/*position: relative;*/
-	/*float: left;*/
-	/*width: 50%;*/
 	max-height: 50%;
 	max-width: 75%;
 	overflow: scroll;
@@ -87,39 +75,63 @@ section p {
 
 .about-me1 {
 	margin-left: 10%;
-	font-size: 16px;
+	font-size: 22px;
 	font-family: Lucida, Monaco, monospace;
 }
 
 .about-me2 {
 	margin-left: 25%;
-	font-size: 16px;
+	font-size: 22px;
 	font-family: Lucida, Monaco, monospace;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 .about-me3 {
 	margin-left: 45%;
-	font-size: 16px;
+	font-size: 22px;
 	font-family: Lucida, Monaco, monospace;
+	padding-top: 1em;
+}
+
+.screen {
+	opacity: 0.8;
 }
 
 .screen1 {
-	/*background-color:rgba(0,100,160,0.5);*/
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(255,255,255,1.0);
 	border-radius: 3px;
 	padding-top: 1px;
 	padding-bottom: 1px;
 }
 
 .screen2 {
-	/*background-color:rgba(0,100,160,0.5);*/
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(255,255,255,1.0);
 	border-radius: 3px;
 }
 
 .screen3 {
-	/*background-color:rgba(0,100,160,0.5);*/
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(255,255,255,1.0);
 	padding-bottom: 1px;
 	border-radius: 3px;
+}
+
+.blog-post-list {
+	background-color: rgba(255,255,255,0.8);
+	padding: 5px;
+	border-radius: 3px;
+	margin-top: 1em;
+}
+
+.projects-list {
+	background-color: rgba(255,255,255,0.8);
+	border-radius: 3px;
+	padding: 5px;
+	margin-top: 1em;
+}
+
+footer {
+	position: fixed;
+	bottom: 0;
+	color: white;
 }
